--- a/css/styles.css
+++ b/css/styles.css
@@ -270,6 +270,32 @@ body {
 	width: 696px;
 }
 
+.backdrop {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+
+	background-color: rgb(49, 48, 46, 0.5);
+}
+
+.backdrop.is-hidden {
+	opacity: 0;
+	pointer-events: none;
+}
+
+.modal {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+
+	min-height: 400px;
+	min-width: 600px;
+	background-color: #fff;
+}
+
 /* Section benefits  */
 
 .benefits {
@@ -542,7 +568,6 @@ body {
 	padding-bottom: 48px;
 }
 
-
 .call-to-action-footer {
 	display: flex;
 	flex-direction: column;
@@ -793,10 +818,7 @@ body {
 }
 
 .example:hover .card-content {
-	box-shadow: 
-	1px 4px 6px rgba(0, 0, 0, 0.16),
-	0px 4px 4px rgba(0, 0, 0, 0.06),
-	0px 1px 1px rgba(0, 0, 0, 0.12);
+	box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
 }
 
 .example:nth-child(3n) {
